--- a/style.css
+++ b/style.css
@@ -388,4 +388,10 @@
     .blurline {
         visibility: hidden;
     }
+    .header
+    {
+        padding:0;
+        margin:0;
+        height: 30px;
+    }
 }
