--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,6 @@
 
 .nav-list
 {
-    background-color: black;
     align-items: center;
     display:flex;
     justify-content: space-between;
@@ -19,6 +18,7 @@
     list-style-type:none;
     padding: 0px 20px;
     font-size: 15px;
+    
 }
 .auth-buttons {
     display: flex;
@@ -134,6 +134,7 @@
     z-index: 3;
     animation: fadeIn 3s;
 }
+
 @keyframes fadeIn {
     0% { opacity: 0; }
     100% { opacity: 1; }
@@ -351,7 +352,7 @@
         font-size: 18px;
         gap: 10px;
         padding: 10px;
-        min-width: 100%;
+        min-width: 50%;
     }
 
     .redirect-button {
@@ -403,5 +404,17 @@
         padding:0;
         margin:0;
         height: 30px;
+
+    }
+    .landing-page
+    {
+        background: #00151B;
+        font-size: 4vh;
+        height:400px;
+        
+    }
+    .html,body
+    {
+        background: #00151B;
     }
 }
